Fix logo alignment

--- a/source/_assets/stylesheets/tomdiggle/layout/_header.scss
+++ b/source/_assets/stylesheets/tomdiggle/layout/_header.scss
@@ -10,3 +10,11 @@
          min-height: 500px;
     }
 }
+
+.site-branding {
+    text-align: center;
+
+    @include breakpoint($breakpoint__sm) {
+        text-align: left;
+    }
+}
